Runtime dynamic agent attach (all toolkits) + Java Web Start support (#17)
* feat: runtime dynamic agent attach (all toolkits) + Java Web Start support

Implements openspec change runtime-attach-and-webstart: attach the agent to an
already-running JVM by PID (no launch-time -javaagent), for Swing/SWT/RCP, with
Java Web Start (JNLP) as a layer on top.

Core (all live-validated):
- agent: com.robotframework.attach.AttachMain loads the agent into a running JVM
  via the JDK Attach API (one artifact — lives in the shipped agent jar; pom adds
  --add-modules jdk.attach). agentmain==premain, so no server changes.
- python/JavaGui/_attach.py: discovery (jps/jcmd + /proc/<pid>/cmdline, app-vs-
  launcher classification), select_jvm (errors on 0/ambiguous), inject_agent (JDK
  Attach default, jattach fallback; clear SecurityManager error on rc=4), and the
  WebStart launch/topology helpers.
- keywords: Attach To Application (pid|main_class|title) and a real List
  Applications on Swing/SWT/RCP libraries; Launch Web Start Application on Swing.
  toolkit=auto works at attach-time (fixes the premain "defaults to Swing" issue).

SpyCore SWT/RCP fix (found bug): refresh() called a nonexistent SwtLibrary
get_ui_tree -> AttributeError; now sources the tree via the getComponentTree RPC
normalized to the generator's node shape. Adds SpyCore.attach + spy CLI
--attach-pid/--attach-main-class/--attach-title. Agent SWT server is now
thread-per-client (parity with Swing) so the spy can hold a connection concurrently.

WebStart finding (live): IcedTea-Web's JNLPSecurityManager structurally blocks
dynamic attach — independent of the app's permission level (all-permissions signed
JNLP still blocked). Supported WebStart attach = launchers/JDKs without the legacy
SM (modern OpenWebStart, JDK 24+); the keyword reports a clear error otherwise.

Tests: test_attach_unit.py (16, no Java), test_runtime_attach_live.py (3, self-skip),
test_swt_spycore.py (SWT spy), tests/robot/jnlp/ (self-skipping Web